<?xml version="1.0"?>
<package>
  <name>rsv_balance_msgs</name>
  <version>0.0.1</version>
  <description>RoboSavvy's balancing platform messages and services definitions.</description>

  <maintainer email="vmatos@robosavvy.com">Vitor Matos</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/Robots/RoboSavvyBalance</url>
  <url type="repository">https://github.com/robosavvy/rsv_balance</url>
  <author email="vmatos@robosavvy.com">Vitor Matos</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
